--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                      <div class="col-md-3 bg-warning" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body cc-experience-header bb">
                            <p>March 2019</p>
-                           <div class="h5">Techkriti'19<br>IIT-Kanpur</div>
+                           <div class="h5"><b>Techkriti'19<br>IIT-Kanpur</b></div>
                         </div>
                      </div>
                      <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
@@ -218,7 +218,7 @@
                   <div class="row">
                      <div class="col-md-3 bg-warning" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body cc-experience-header bb">
-                           <div class="h5">Amazon Developer</div>
+                           <div class="h5"><b>Amazon Developer</b></div>
                         </div>
                      </div>
                      <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
@@ -237,7 +237,7 @@
                      <div class="col-md-3 bg-warning" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body cc-experience-header bb">
                            <p>March 2018</p>
-                           <div class="h5">Robocon'18</div>
+                           <div class="h5"><b>Robocon'18</b></div>
                         </div>
                      </div>
                      <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
@@ -263,7 +263,7 @@
                      <div class="col-md-3 bg-warning" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body cc-experience-header bb">
                            <p>May 2021</p>
-                           <div class="h5">Sahutronics</div>
+                           <div class="h5"><b>Sahutronics</b></div>
                         </div>
                      </div>
                      <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
@@ -284,7 +284,7 @@
                      <div class="col-md-3 bg-warning" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body cc-experience-header bb">
                            <p>Feb 2021</p>
-                           <div class="h5">Remote Desk   </div>
+                           <div class="h5"><b>Remote Desk</b></div>
                         </div>
                      </div>
                      <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
@@ -309,7 +309,7 @@
                      <div class="col-md-3 bg-warning" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body cc-experience-header bb">
                            <p>Feb 2021</p>
-                           <div class="h5">FastDM</div>
+                           <div class="h5"><b>FastDM</b></div>
                         </div>
                      </div>
                      <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
@@ -334,7 +334,7 @@
                      <div class="col-md-3 bg-warning" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body cc-experience-header bb">
                            <p>July 2020</p>
-                           <div class="h5">Virtual Table Tennis </div>
+                           <div class="h5"><b>Virtual Table Tennis</b> </div>
                         </div>
                      </div>
                      <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
@@ -358,7 +358,7 @@
                      <div class="col-md-3 bg-warning" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body cc-experience-header bb">
                            <p>July 2020</p>
-                           <div class="h5">Invisibility Cloak </div>
+                           <div class="h5"><b>Invisibility Cloak </b></div>
                         </div>
                      </div>
                      <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
@@ -383,7 +383,7 @@
                      <div class="col-md-3 bg-warning" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body cc-experience-header bb">
                            <p>July 2020</p>
-                           <div class="h5">Duck-Hunt Game</div>
+                           <div class="h5"><b>Duck-Hunt Game</b></div>
                         </div>
                      </div>
                      <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
@@ -406,7 +406,7 @@
                      <div class="col-md-3 bg-warning" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body cc-experience-header bb">
                            <p>April 2020</p>
-                           <div class="h5">Travis Bot </div>
+                           <div class="h5"><b>Travis Bot</b> </div>
                         </div>
                      </div>
                      <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
@@ -430,7 +430,7 @@
                      <div class="col-md-3 bg-warning" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body cc-experience-header bb">
                            <p>Feb 2020</p>
-                           <div class="h5">Voice Assisted Train Enquiry</div>
+                           <div class="h5"><b>Voice Assisted Train Enquiry</b></div>
                         </div>
                      </div>
                      <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
@@ -455,7 +455,7 @@
                      <div class="col-md-3 bg-warning" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body cc-experience-header bb">
                            <p>March 2020</p>
-                           <div class="h5">Home Automation<br>(Android App)</div>
+                           <div class="h5"><b>Home Automation<br>(Android App)</b></div>
                         </div>
                      </div>
                      <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
@@ -472,7 +472,7 @@
                      <div class="col-md-3 bg-warning" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body cc-experience-header bb">
                            <p>March 2019</p>
-                           <div class="h5">Home Automation Device</div>
+                           <div class="h5"><b>Home Automation Device</b></div>
                         </div>
                      </div>
                      <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
@@ -498,7 +498,7 @@
                      </div>
                      <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body">
-                           <div class="h5">Website Development Competition's </div>
+                           <div class="h5"><b>Website Development Competition's </b></div>
                            <p class="nn">
                               &bull;Made websites for various web-development competition's held in our college.<br>
                               &bull;For Hire Uncle: Domestic Help Portal and Food Uncle: Food ordering Portal, got First prize.<br>
@@ -525,7 +525,7 @@
                         <div class="card-body cc-education-header bb">
                            <p class="h5">2021-Present</p>
                            <div class="h5">
-                              <br>Masters's Degree<br>
+                              <br><b>Masters's Degree</b><br>
                               <center>
                               <center>
                            </div>
@@ -548,7 +548,7 @@
                         <div class="card-body cc-education-header bb">
                            <p class="h5">2017-2021</p>
                            <div class="h5">
-                              <br>Bachelor's Degree<br>
+                              <br><b>Bachelor's Degree</b><br>
                               <center>
                               <center>
                            </div>
@@ -573,7 +573,7 @@
                         <div class="card-body cc-education-header bb">
                            <p class="h5">2017</p>
                            <div class="h5">
-                              <br>Intermediate<br>
+                              <br><b>Intermediate</b><br>
                               <center>
                               (Class XII)
                               <center>
@@ -598,7 +598,7 @@
                         <div class="card-body cc-education-header bb">
                            <p class="h5">2015</p>
                            <div class="h5">
-                              <br>High School<br>
+                              <br><b>High School</b><br>
                               <center>
                               (Class X)
                               <center>
@@ -860,7 +860,7 @@
 
          <div class="h4 title text-center">Peeyush Sahu</div>
          <div class="text-center text-muted">
-         	Bachelors's Student at College Of Engineering Roorkee
+         	<span>Masters's Student</span> - <span>International Institute Of Information Technology Hyderabad</span> 
          </div>
       </footer>
       <script>
