--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
                            <div class="h5">IIIT Hyderabad</div>
                            <p class="nn">M.Tech - Computer Science and Information Security</p>
                            
-                           <div class="nn"><b>GPA :</b>NA</div>
+                           <div class="nn"><b>CGPA :</b>9.33</div>
                            <p></p>
                         </div>
                      </div>
@@ -561,7 +561,7 @@
                            <div><br></div>
                            <div class="nn"><b>Affilated University:</b> Uttarakhand Technical University</div>
                            <div class="nn"><b>Subjects of Interest :</b> Data Structures, Design and Analysis of Algorithms, Operating Systems, Programming</div>
-                           <div class="nn"><b>Percentage :</b> 75.6% (till second year)</div>
+                           <div class="nn"><b>Percentage :</b> 77.8%</div>
                            <p></p>
                         </div>
                      </div>
